--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.itmo.mobile">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".Task1Activity" />
         <activity android:name=".Task1DetailActivity" />
+        <activity android:name=".Task3Activity" />
     </application>
 
 </manifest>
