--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".Task1Activity" />
         <activity android:name=".Task1DetailActivity" />
         <activity android:name=".Task3Activity" />
+        <activity android:name=".Task2Activity" />
     </application>
 
 </manifest>
